--- a/public/index.html
+++ b/public/index.html
@@ -11,22 +11,22 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <meta name="description" content="Software engineering portfolio">
-    <meta property="og:title" content="Sam Xie" />
-    <meta property="og:description" content="Software engineering portfolio" />
+    <meta name="description" content="A Brief Introduction to Akshat Thakur">
+    <meta property="og:title" content="Akshat Thakur" />
+    <meta property="og:description" content="A Brief Introduction to Akshat Thakur" />
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://www.samxie.net/" />
+    <meta property="og:url" content="https://akshatthakur.github.io/" />
     <meta property="og:image" content="https://samxie.net/flight-light.jpg" />
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
     <link rel="manifest" href="/site.webmanifest">
     <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css" />
-    <title>Sam Xie</title>
+    <title>Akshat Thakur</title>
   </head>
   <body>
     <noscript>
-      <strong>We're sorry but our website doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
+      <strong>Hello! Unfortunately, your JavaScript don't seem to be working. Please enable it and reload this page. Cheers!</strong>
     </noscript>
     <div id="app"></div>
     <!-- built files will be auto injected -->
